--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,7 +7,7 @@ on:
     # Sequence of patterns matched against refs/heads
     branches:
       - master
-      - forget-consent-pin
+      - nha-tests
 jobs:
   API-test:
     runs-on: ubuntu-latest
@@ -22,6 +22,7 @@ jobs:
         env:
           ConsentManagerSecret: ${{ secrets.ConsentManagerSecret }} # required
           HIPSecret: ${{ secrets.HIPSecret }} # required
+          env: ncg # required
       - name: Print Run id
         run: echo $GITHUB_RUN_ID
       - uses: 8398a7/action-slack@v2
@@ -34,7 +35,7 @@ jobs:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
         if: always()
 
-  mobile-test:
+  mobile-test-ncg:
     runs-on: macOS-latest
     steps:
       - name: checkout
@@ -48,19 +49,130 @@ jobs:
           node-version: '10.16'
           java-version: 1.8
       - run: npm install -g appium
-      - name: run tests
+      - name: run mobile tests on NCG
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
+          profile: Nexus 6
           script: mvn clean "-Dtest=/**/MobileAppTests/Tests/*Test" test
         env:
           Authorization: ${{ secrets.Authorization }}
+          env: ncg # required
       - name: Notify on Slack
         uses: 8398a7/action-slack@v2
         with:
           status: ${{ job.status }}
-          author_name: Functional Tests
-          text: Functional Mobile Tests
+          author_name: Functional Tests on NCG
+          text: Functional Mobile Tests on NCG
+          channel: '#botcave'
+          only_mention_fail: USXBM5WPQ,here
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # required
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
+        if: always()
+
+  mobile-test-nhs-dev:
+    runs-on: macOS-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
+      - name: set up node
+        uses: actions/setup-node@v1
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          fetch-depth: 1
+          node-version: '10.16'
+          java-version: 1.8
+      - run: npm install -g appium
+      - name: run mobile tests on NHS Dev
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 29
+          profile: Nexus 6
+          script: mvn clean "-Dtest=/**/MobileAppTests/Tests/LoginTest" test
+        env:
+          Authorization: ${{ secrets.Authorization }}
+          env: nhsDev # required
+      - name: Notify on Slack
+        uses: 8398a7/action-slack@v2
+        with:
+          status: ${{ job.status }}
+          author_name: Functional Tests on NHS Dev
+          text: Functional Mobile Tests on NHS Dev
+          channel: '#botcave'
+          only_mention_fail: USXBM5WPQ,here
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # required
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
+        if: always()
+
+
+#  mobile-test-nhs-UAT:
+#    runs-on: macOS-latest
+#    steps:
+#      - name: checkout
+#        uses: actions/checkout@v2
+#      - name: set up node
+#        uses: actions/setup-node@v1
+#      - name: Set up JDK 1.8
+#        uses: actions/setup-java@v1
+#        with:
+#          fetch-depth: 1
+#          node-version: '10.16'
+#          java-version: 1.8
+#      - run: npm install -g appium
+#      - name: run mobile tests on NHS Dev
+#        uses: reactivecircus/android-emulator-runner@v2
+#        with:
+#          api-level: 29
+#          profile: Nexus 6
+#          script: mvn clean "-Dtest=/**/MobileAppTests/Tests/LoginTest" test
+#        env:
+#          Authorization: ${{ secrets.Authorization }}
+#          env: nhsUAT # required
+#      - name: Notify on Slack
+#        uses: 8398a7/action-slack@v2
+#        with:
+#          status: ${{ job.status }}
+#          author_name: Functional Tests on NHS UAT
+#          text: Functional Mobile Tests on NHS UAT
+#          channel: '#botcave'
+#          only_mention_fail: USXBM5WPQ,here
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # required
+#          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
+#        if: always()
+
+  mobile-test-nhs-Sandbox:
+    runs-on: macOS-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
+      - name: set up node
+        uses: actions/setup-node@v1
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          fetch-depth: 1
+          node-version: '10.16'
+          java-version: 1.8
+      - run: npm install -g appium
+      - name: run mobile tests on NHS Dev
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 29
+          profile: Nexus 6
+          script: mvn clean "-Dtest=/**/MobileAppTests/Tests/LoginTest" test
+        env:
+          Authorization: ${{ secrets.Authorization }}
+          env: nhsSandbox # required
+      - name: Notify on Slack
+        uses: 8398a7/action-slack@v2
+        with:
+          status: ${{ job.status }}
+          author_name: Functional Tests on NHS Sandbox
+          text: Functional Mobile Tests on NHS Sandbox
           channel: '#botcave'
           only_mention_fail: USXBM5WPQ,here
         env:
