--- a/src/test/resources/config-nhs-dev.properties
+++ b/src/test/resources/config-nhs-dev.properties
@@ -10,8 +10,8 @@ APP_ACTIVITY= in.ndhm.phr.LauncherActivity
 APP_PACKAGE = in.ndhm.phr.debug
 
 # <--------------------------------------------- MOBILE - TEST DATA -------------------------------------------------->
-mobileUser      = test.sb.005
-mobilePassword  = Test135@
+mobileUser      = mockhina
+mobilePassword  = Test@1324
 
 # <-------------------------------------------------- API - URLs ----------------------------------------------------->
 consentManagerURL   = https://dev.tweka.in/cm
