--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <gson.version>2.8.6</gson.version>
         <rest-assured.version>4.2.0</rest-assured.version>
         <spotless-maven-plugin.version>2.3.0</spotless-maven-plugin.version>
+        <maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>
     </properties>
 
     <dependencies>
@@ -46,14 +47,12 @@
             <artifactId>json-path</artifactId>
             <version>${json-path.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-remote-driver</artifactId>
@@ -88,6 +87,22 @@
                             </includes>
                             <googleJavaFormat/>
                         </java>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-checkstyle-plugin</artifactId>
+                    <version>${maven-checkstyle-plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>check</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <configLocation>/config/checkstyle/checkstyle.xml</configLocation>
                     </configuration>
                 </plugin>
             </plugins>
