--- a/.github/workflows/mobileTestUAT.yml
+++ b/.github/workflows/mobileTestUAT.yml
@@ -17,14 +17,14 @@ jobs:
             uses: actions/checkout@v2
           - name: set up node
             uses: actions/setup-node@v1
-          - name: Set up JDK 1.8
+          - name: Set up JDK 11
             uses: actions/setup-java@v1
             with:
               fetch-depth: 1
               node-version: '10.16'
-              java-version: 1.8
+              java-version: 11
           - run: npm install -g appium
-          - name: run mobile tests on NHS Dev
+          - name: run mobile tests on NHS UAT
             uses: reactivecircus/android-emulator-runner@v2
             with:
               api-level: 29
