--- a/.github/workflows/actions-sandbox.yml
+++ b/.github/workflows/actions-sandbox.yml
@@ -54,7 +54,7 @@ jobs:
         with:
           api-level: 29
           profile: Nexus 6
-          script: mvn clean "-Dtest=/**/MobileAppTests/Tests/LoginTest" test
+          script: mvn clean "-Dtest=/**/mobiletests/tests/*Test" test
         env:
           Authorization: ${{ secrets.Authorization }}
           env: nhsSandbox # required
