--- a/.github/workflows/mobile-tests-UAT.yml
+++ b/.github/workflows/mobile-tests-UAT.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow that is manually triggered
 
-name: Manual workflow
+name: Manual workflow on UAT
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
@@ -29,7 +29,7 @@ jobs:
             with:
               api-level: 29
               profile: Nexus 6
-              script: mvn clean "-Dtest=/**/MobileAppTests/Tests/LoginTest" test
+              script: mvn clean "-Dtest=/**/mobiletests/tests/*Test" test
             env:
               Authorization: ${{ secrets.Authorization }}
               env: nhsUAT # required
