--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -116,7 +116,7 @@ jobs:
         with:
           api-level: 29
           profile: Nexus 6
-          script: mvn clean "-Dtest=/**/mobiletests/tests/LoginTest" test
+          script: mvn clean "-Dtest=/**/mobiletests/tests/*Test" test
         env:
           Authorization: ${{ secrets.Authorization }}
           env: nhsDev # required
