--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -115,7 +115,7 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
-          profile: Nexus 6
+          profile: Pixel 2
           script: mvn clean "-Dtest=/**/mobiletests/tests/LoginTest" test
         env:
           Authorization: ${{ secrets.Authorization }}
