--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -114,8 +114,10 @@ jobs:
       - name: run mobile tests on NHS Dev
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 27
-          profile: Pixel 2
+          arch: x86_64
+          api-level: 29
+          avd-name: system-images/android-29/google_apis_playstore/x86/
+#          playstore.enabled: true
           script: mvn clean "-Dtest=/**/mobiletests/tests/LoginTest" test
         env:
           Authorization: ${{ secrets.Authorization }}
