--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <artifactId>ProjectEKA-tets</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
+        <java.version>11</java.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <testng.version>6.9.8</testng.version>
@@ -122,6 +123,9 @@
                         </execution>
                     </executions>
                     <configuration>
+                        <includes>
+                            <include>src/**/java/**/**/*.java</include>
+                        </includes>
                         <linkXRef>true</linkXRef>
                         <rulesets>
                             <ruleset>${pmd-ruleset-path}</ruleset>
