--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -114,8 +114,8 @@ jobs:
       - name: run mobile tests on NHS Dev
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          arch: x86
-          api-level: 27
+          api-level: 29
+          profile: Nexus 6
           script: mvn clean "-Dtest=/**/mobiletests/tests/LoginTest" test
         env:
           Authorization: ${{ secrets.Authorization }}
