--- a/.github/workflows/mobile-tests-Dev.yml
+++ b/.github/workflows/mobile-tests-Dev.yml
@@ -22,7 +22,7 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
-          profile: Nexus 6
+          profile: Pixel 2
           script: avdmanager list && mvn clean "-Dtest=/**/mobiletests/tests/LoginTest" test
         env:
           Authorization: ${{ secrets.Authorization }}
