--- a/.github/workflows/mobile-tests-Dev.yml
+++ b/.github/workflows/mobile-tests-Dev.yml
@@ -2,6 +2,11 @@ name: Manual workflow on Dev
 
 on:
   workflow_dispatch:
+  push:
+    # Sequence of patterns matched against refs/heads
+    branches:
+      - master
+      - refactor-mobile-tests
 
 jobs:
   mobile-test-nhs-dev:
@@ -22,7 +27,7 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
-          profile: Pixel 2
+          profile: pixel_2
           script: avdmanager list && mvn clean "-Dtest=/**/mobiletests/tests/LoginTest" test
         env:
           Authorization: ${{ secrets.Authorization }}
