--- a/.github/workflows/mobile-tests-Dev.yml
+++ b/.github/workflows/mobile-tests-Dev.yml
@@ -27,6 +27,7 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
+          target: google_apis
           profile: pixel_2
           script: avdmanager list && mvn clean "-Dtest=/**/mobiletests/tests/LoginTest" test
         env:
